force-app/main/default/objects/Framework__c/Framework__c.object-meta.xml
<CustomObject>
    <label>Framework</label>
    <nameField>
        <label>Framework Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Frameworks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>