force-app/main/default/objects/Framework__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Unique Id to identify specific Framework records</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>