force-app/main/default/objects/Framework__c/fields/Framework_Category__c.field-meta.xml
<CustomField>
    <fullName>Framework_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Framework Category</label>
    <referenceTo>Framework_Category__c</referenceTo>
    <relationshipLabel>Frameworks</relationshipLabel>
    <relationshipName>Frameworks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>