force-app/main/default/objects/Framework__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Stores a link to the official Frameworks documentation site</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>